# SolStice

./: .gitignore  Anchor.toml  README.md  package-lock.json
Frontend/: App.tsx  DEPLOY_WEB.md  app.json  package-lock.json  package.json  tailwind.config.js
Frontend/app/components/: AppButton.tsx  AppScreen.tsx  EmptyState.tsx  GlassCard.tsx  InputField.tsx  ScreenHeader.tsx  SimpleLineChart.tsx  TrendChart.tsx  WhatWeDoSection.tsx
Frontend/app/hooks/: useDashboard.ts  useDecisions.ts  usePublicNews.ts
Frontend/app/navigation/: MainTabs.tsx  RootNavigator.tsx
Frontend/app/providers/: AppProvider.tsx  ToastProvider.tsx
Frontend/app/services/: decisionService.ts  newsService.ts  vaultService.ts  walletService.ts
Frontend/app/store/: useAppStore.ts
Frontend/app/types/: index.ts
Frontend/sway-public/: README.md  index.html  style.css
Smart-Contract/: Anchor.toml  package-lock.json  package.json
Smart-Contract/programs/solstice/: Cargo.toml
Smart-Contract/programs/solstice/src/: lib.rs
Smart-Contract/scripts/: deposit.js  init.js
Smart-Contract/sdk/: sdk.ts
Smart-Contract/tests/: solstice.ts
app/: App.tsx  app.json  package-lock.json  package.json
app/app/components/: AppButton.tsx  (+5 more)
programs/solstice/: Cargo.toml
sol-agent/: .env.example  gui.html  main.py  requirements.txt
sol-agent/custom-model/: Modelfile  README.md  collect_data.py  export_gguf.py  finetune.py  generate_training.py  train_local.py  training_data.jsonl  validation_data.jsonl
sol-agent/sdk-bridge/: .env.example  index.js  package-lock.json  package.json  solstice.json
(+33 files in other folders)
